<resources>
    <string name="app_name">Charging Record</string>
    <string name="btn_record_start">Start</string>
    <string name="btn_record_stop">Stop</string>
    <string name="btn_record_delete">Delete All</string>

    <!--    Output to TextView styled with HTML-->
    <string name="list_title"><![CDATA[<h3>YOUR CHARGING DATA</h3>]]></string>
    <string name="list_start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="list_end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="list_phone_heat"><![CDATA[<b>Phone Heat:</b>]]></string>
    <string name="list_hours"><![CDATA[<b>Hours: Minutes: Seconds</b>]]></string>
    <string name="list_total_charge"><![CDATA[<b>Total Charge:</b>]]></string>

    <!--    Record phone heat String-->
    <string name="tv_heat_title">How is the heat of your phone?</string>
    <string name="zero_very_hot">Very Hot</string>
    <string name="one_hot">Hot</string>
    <string name="two_so_so">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_stable">Stable</string>
    <string name="five_very_stable">Very Stable</string>

    <string name="delete_snackbar">All of your records successfully deleted.</string>
    <string name="menu_record">Record</string>
    <string name="menu_status">Status</string>

    <string name="status_level">%1$d\%%</string>
    <string name="status_incharging">In Charging</string>
    <string name="in_charging">In Charging</string>
    <string name="not_charging">Not Charging</string>

</resources>
