<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.aesthomic.chargingrecord.phoneheat.PhoneHeatViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".phoneheat.PhoneHeatFragment">

        <TextView
            android:id="@+id/tv_heat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline_heat_margin_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_heat_margin_end"
            app:layout_constraintTop_toTopOf="@id/guideline_heat_margin_top"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/tv_heat_title"/>

        <Button
            android:id="@+id/btn_heat_zero"
            style="@style/ButtonHeat"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/tv_heat_title"
            app:layout_constraintStart_toStartOf="@id/guideline_heat_margin_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_heat_margin_end"
            android:onClick="@{() -> viewModel.onSetPhoneHeat(0)}"
            android:text="@string/zero_very_hot"/>

        <Button
            android:id="@+id/btn_heat_one"
            style="@style/ButtonHeat"
            app:layout_constraintTop_toBottomOf="@+id/btn_heat_zero"
            app:layout_constraintStart_toStartOf="@id/guideline_heat_margin_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_heat_margin_end"
            android:onClick="@{() -> viewModel.onSetPhoneHeat(1)}"
            android:text="@string/one_hot"/>

        <Button
            android:id="@+id/btn_heat_two"
            style="@style/ButtonHeat"
            app:layout_constraintTop_toBottomOf="@+id/btn_heat_one"
            app:layout_constraintStart_toStartOf="@id/guideline_heat_margin_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_heat_margin_end"
            android:onClick="@{() -> viewModel.onSetPhoneHeat(2)}"
            android:text="@string/two_so_so"/>

        <Button
            android:id="@+id/btn_heat_three"
            style="@style/ButtonHeat"
            app:layout_constraintTop_toBottomOf="@+id/btn_heat_two"
            app:layout_constraintStart_toStartOf="@id/guideline_heat_margin_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_heat_margin_end"
            android:onClick="@{() -> viewModel.onSetPhoneHeat(3)}"
            android:text="@string/three_ok"/>

        <Button
            android:id="@+id/btn_heat_four"
            style="@style/ButtonHeat"
            app:layout_constraintTop_toBottomOf="@+id/btn_heat_three"
            app:layout_constraintStart_toStartOf="@id/guideline_heat_margin_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_heat_margin_end"
            android:onClick="@{() -> viewModel.onSetPhoneHeat(4)}"
            android:text="@string/four_stable"/>

        <Button
            android:id="@+id/btn_heat_five"
            style="@style/ButtonHeat"
            app:layout_constraintTop_toBottomOf="@+id/btn_heat_four"
            app:layout_constraintStart_toStartOf="@id/guideline_heat_margin_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_heat_margin_end"
            android:onClick="@{() -> viewModel.onSetPhoneHeat(5)}"
            android:text="@string/five_very_stable"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_heat_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/fragment_vertical_margin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_heat_margin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/fragment_horizontal_margin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_heat_margin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/fragment_horizontal_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>